--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,13 +1,7 @@
+<app-navbar></app-navbar>
 
-<div class="my-wrapper">
-
-
-  <div class="form-group">
-      <input class="form-control" type="text" placeholder="name">
-  </div>
-  <div class="form-group">
-      <button class="btn btn-primary" (click)="sendValue()">Submit</button>
-  </div>
+<app-arena></app-arena>
 
 
-  </div>
+  
+ 
