--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -1,3 +1,47 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input [(ngModel)] = "auto_suggest" [ngModelOptions]="{standalone: true}" class="custonInput form-control mr-sm-2" (keyup)="onAutoSuggest($event)" type="search" placeholder="Search" aria-label="Search">
+      <button (click)="onAutoSuggest(auto_suggest)" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add Stock</button>
+    </form>
+  </div>
+</nav>
+
+
+
+<div class="suggestions">
+    <ul class="list-group">
+        <li *ngFor="let d of suggested_data" (click)="onSelectStock( d.symbol, d.name )"  class="list-group-item" >
+          <p class="firstItem"> {{ d.name }}  </p>
+          <p> {{ d.region }}  </p>
+        </li>
+       
+      </ul>
+</div>
