--- a/src/app/dashboard/navbar/navbar.component.html
+++ b/src/app/dashboard/navbar/navbar.component.html
@@ -29,7 +29,7 @@
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input [(ngModel)] = "auto_suggest" [ngModelOptions]="{standalone: true}" class="custonInput form-control mr-sm-2" (keyup)="onAutoSuggest($event)" type="search" placeholder="Search" aria-label="Search">
-      <button (click)="onAutoSuggest(auto_suggest)" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add Stock</button>
+      <button (click)="onManualSelection(auto_suggest)" class="btn btn-outline-success my-2 my-sm-0" type="submit">Add Stock</button>
     </form>
   </div>
 </nav>
